k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-microservice
  labels:
    app: my-microservice
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
    nodePort: 30007   # optional (or remove to auto assign)
  selector:
    app: my-microservice
